Fixed spacing on business index/show for categories

--- a/app/assets/stylesheets/business-index.scss
+++ b/app/assets/stylesheets/business-index.scss
@@ -209,3 +209,14 @@
   color: #000;
   border: 1px solid transparent;
 }
+
+#smaller-btn-one {
+  width: 67px;
+}
+
+#smaller-btn-one::after {
+    margin: 0 8px;
+    content: "\2022";
+    color: #999;
+    font-size: 10px;
+}
