--- a/app/assets/stylesheets/business-show.css
+++ b/app/assets/stylesheets/business-show.css
@@ -35,6 +35,11 @@
 
 .business-show-review-count {
   color: #666;
+  width: 65px;
+}
+
+.business-show-pricecat {
+  min-width: 100px;
 }
 
 .business-show-pricecat a {
@@ -254,6 +259,7 @@
   font-size: 14px;
   border-style: none;
   background-color: transparent;
+  display: inline;
 }
 
 .button-link:hover {
@@ -265,3 +271,19 @@
   cursor: pointer;
 }
 
+#cat-one {
+  width: 60px;
+  height:2;
+}
+
+#cat-two {
+  width: 80px;
+    height: 2px;
+}
+
+#cat-one::after {
+  margin: 0 8px;
+  content: "\2022";
+  color: #999;
+  font-size: 10px;
+}
